--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cloudinary": "^2.8.0",
     "lucide-react": "^0.556.0",
+    "mongoose": "^9.0.1",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0"
